# potato-registry

./: .gitignore  Dockerfile  pyproject.toml
src/potato_registry/: main.py  models.py  schemas.py
src/potato_registry/core/: config.py  deps.py  initial_data.py  security.py  sso.py  utils.py
src/potato_registry/routes/: packages.py  rbac.py  simple.py  sso.py  upload.py  users.py
